<resources>
    <string name="app_name">FreshFetch</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_">Login</string>
    <string name="full_name">Full Name</string>
    <string name="username_hint">Enter your name</string>
    <string name="number_hint">Enter your number</string>
    <string name="login_header">Ship and Track anytime</string>
    <string name="create_account_btn">Create Account</string>
    <string name="password_hint">Enter your password</string>
    <string name="or">OR</string>
    <string name="password_label">Password</string>
    <string name="google_signup">Sign Up With Google</string>
    <string name="apple_signup">Sign Up With Apple</string>
    <string name="signup_header">Come and Join us!</string>
    <string name="signup_description">Get great experience with us now</string>
    <string name="signup_btn">Sign Up</string>
    <string name="signin_btn">Sign In</string>
    <string name="price">$12</string>
    <string name="home_heading">HOME</string>
    <string name="search">Search your items here</string>
    <string name="deli_btn">Delivery</string>
    <string name="pickup_btn">Pick Up</string>
    <string name="bestRice">Best Rice</string>
    <string name="home_feature">Features</string>
    <string name="rice_description">Rice is a versatile staple known for its neutral flavor and essential role in global cuisines.</string>
</resources>