<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
<<<<<<< HEAD
    xmlns:app="http://schemas.android.com/apk/res-auto"
=======
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
<<<<<<< HEAD
    tools:context=".MainActivity"
    >

=======
    tools:context=".MainActivity">
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2

    <Button
        android:id="@+id/btn_create"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
<<<<<<< HEAD
        android:layout_marginStart="75dp"
        android:layout_marginTop="463dp"
        android:layout_weight="1"
        android:backgroundTint="#00AF5B"
        android:fontFamily="@font/font"
        android:text="Create Account"
        android:textSize="20dp" />
=======
        android:layout_marginStart="76dp"
        android:layout_marginTop="467dp"
        android:backgroundTint="#00AF5B"
        android:fontFamily="@font/font"
        android:text="@string/create_account_btn"
        android:textColor="@color/white"
        android:textSize="20sp" />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
<<<<<<< HEAD
        android:layout_marginStart="68dp"
        android:layout_marginTop="228dp"
        android:drawableLeft="@drawable/icons8_user_18"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="@font/font"
        android:hint="Enter your name"
        android:inputType="text"
        android:textSize="16dp" />
=======
        android:layout_marginStart="70dp"
        android:layout_marginTop="229dp"
        android:autofillHints=""
        android:drawableStart="@drawable/icons8_user_18"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="@font/font"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
<<<<<<< HEAD
        android:layout_marginStart="69dp"
        android:layout_marginTop="209dp"
        android:text="Full Name" />
=======
        android:layout_marginStart="70dp"
        android:layout_marginTop="209dp"
        android:text="@string/full_name"
        tools:ignore="RelativeOverlap" />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="311dp"
<<<<<<< HEAD
        android:drawableLeft="@drawable/icons8_phone_18"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="@font/font"
        android:hint="Enter your number"
        android:inputType="phone"
        android:textSize="16dp" />
=======
        android:drawableStart="@drawable/icons8_phone_18"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="@font/font"
        android:hint="@string/number_hint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="400dp"
<<<<<<< HEAD
        android:drawableLeft="@drawable/icons8_password_18"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="@font/font"
        android:hint="Enter your password"
        android:inputType="textPassword"
        android:textSize="16dp" />
=======
        android:drawableStart="@drawable/icons8_password_18"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="@font/font"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:autofillHints=""
        tools:ignore="RelativeOverlap" />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="381dp"
<<<<<<< HEAD
        android:text="Password"
        android:textSize="14dp"
        tools:ignore="TextSizeCheck" />
=======
        android:text="@string/password_label"
        android:textSize="14sp"
        tools:ignore="RelativeOverlap,TextSizeCheck" />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="291dp"
<<<<<<< HEAD
        android:contentDescription="Phone Number"
        android:text="Phone Number"
        android:textSize="14dp"
        tools:ignore="TextSizeCheck" />
=======
        android:contentDescription="@string/phone_number"
        android:text="@string/phone_number"
        android:textSize="14sp"
        tools:ignore="RelativeOverlap,TextSizeCheck"
        />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2


    <View
        android:layout_width="600dp"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/btn_create"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
<<<<<<< HEAD
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="-21dp"
        android:background="#D6D6D6" />


=======
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="-60dp"
        android:background="#D6D6D6" />

>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/font"
<<<<<<< HEAD
        android:text="Ship and Track anytime"
        android:textSize="26dp" />
=======
        android:text="@string/signup_header"
        android:textSize="26sp"
        tools:ignore="RelativeOverlap" />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/font"
<<<<<<< HEAD
        android:text="Get great experience with us now"
        android:textColor="#368166"
        android:textSize="16dp"
=======
        android:text="@string/signup_description"
        android:textColor="#368166"
        android:textSize="16sp"
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="166dp"
<<<<<<< HEAD
        android:text="OR"
=======
        android:text="@string/or"
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2
        android:textColor="@android:color/darker_gray"
        android:fontFamily="@font/font"/>

    <Button
        android:id="@+id/Google"
        android:layout_width="246dp"
        android:layout_height="59dp"
<<<<<<< HEAD
        android:layout_weight= "1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
=======
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="195dp"
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2
        android:backgroundTint="#DEE4E1"
        android:drawableLeft="@drawable/icons8_google_24"
        android:drawablePadding="0dp"
        android:fontFamily="@font/font"
<<<<<<< HEAD
        android:text="Sign Up with Google"
        android:textColor="@color/black"
        android:textSize="18dp"
=======
        android:text="@string/google_signup"
        android:textColor="@color/black"
        android:textSize="18sp"
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/Apple"
        android:layout_width="248dp"
        android:layout_height="62dp"
<<<<<<< HEAD
        android:layout_weight= "1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:layout_marginRight="10dp"
        android:text="Sign Up with Apple"
        android:fontFamily="@font/font"
        android:backgroundTint="@color/black"
        android:textSize="18dp"
        android:drawableLeft="@drawable/icons8_apple_24"/>
=======
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/icons8_apple_24"
        android:fontFamily="@font/font"
        android:text="@string/apple_signup"
        android:textColor="@color/white"
        android:textSize="18sp" />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2

    <Button
        android:id="@+id/BSI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
<<<<<<< HEAD
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/lightgreen"
        android:enabled="false"
        android:clickable="false"
        android:fontFamily="@font/font"
        android:text="Sign Up"
=======
        android:layout_centerVertical="true"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="99dp"
        android:backgroundTint="@color/lightgreen"
        android:clickable="false"
        android:enabled="false"
        android:fontFamily="@font/font"
        android:text="@string/signin_btn"
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/BSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
<<<<<<< HEAD
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:backgroundTint="@color/gray"
        android:clickable="true"
        android:enabled="true"
        android:fontFamily="@font/font"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="15sp" />
=======
        android:layout_centerVertical="true"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="246dp"
        android:backgroundTint="@color/gray"
        android:enabled="true"
        android:focusable="true"
        android:fontFamily="@font/font"
        android:text="@string/signup_btn"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:ignore="RelativeOverlap" />
>>>>>>> bff985359f6af5ef7eb2e2e9c3d8bce2777fc6c2
</RelativeLayout>