<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity"
    >


    <Button
        android:id="@+id/btn_create"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="377dp"
        android:backgroundTint="#00AF5B"
        android:fontFamily="@font/font"
        android:text="@string/login_"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="207dp"
        android:text="@string/full_name"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="227dp"
        android:drawableStart="@drawable/icons8_user_18"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="@font/font"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:textSize="16sp"
        android:autofillHints=""
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="292dp"
        android:contentDescription="@string/phone_number"
        android:text="@string/phone_number"
        android:textSize="14sp"
        tools:ignore="RelativeOverlap,TextSizeCheck" />

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="311dp"
        android:drawableStart="@drawable/icons8_phone_18"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="@font/font"
        android:hint="@string/number_hint"
        android:inputType="phone"
        android:textSize="16sp"
        android:autofillHints=""
        tools:ignore="RelativeOverlap" />

    <View
        android:layout_width="600dp"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/btn_create"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="-21dp"
        android:background="#D6D6D6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/font"
        android:text="@string/login_header"
        android:textSize="26sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="73dp"
        android:fontFamily="@font/font"
        android:text="Get great experience with us now"
        android:textColor="#368166"
        android:textSize="16dp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="232dp"
        android:fontFamily="@font/font"
        android:text="OR"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/Google"
        android:layout_width="246dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="155dp"
        android:layout_weight="1"
        android:backgroundTint="#DEE4E1"
        android:drawableLeft="@drawable/icons8_google_24"
        android:drawablePadding="0dp"
        android:fontFamily="@font/font"
        android:text="Sign Up with Google"
        android:textColor="@color/black"
        android:textSize="18dp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/Apple"
        android:layout_width="248dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="83dp"
        android:layout_weight="1"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/icons8_apple_24"
        android:fontFamily="@font/font"
        android:text="Sign Up with Apple"
        android:textSize="18dp" />

    <Button
        android:id="@+id/BSI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:backgroundTint="@color/lightgreen"
        android:enabled="true"
        android:fontFamily="@font/font"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/BSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="221dp"
        android:layout_marginRight="221dp"
        android:backgroundTint="@color/gray"
        android:clickable="false"
        android:enabled="false"
        android:fontFamily="@font/font"
        android:text="Sign In"
        android:textColor="@color/white"
        android:textSize="15sp" />
</RelativeLayout>